gateway/k8s/pixiu-gateway.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

---
# Source: pixiu-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixiu-gateway
  namespace: default
  labels:
    control-plane: pixiu-gateway
spec:
  selector:
    control-plane: pixiu-gateway
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: health
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
---
# Source: pixiu-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixiu-gateway
  namespace: default
  labels:
    control-plane: pixiu-gateway
    helm.sh/chart: pixiu-gateway-1.0.0
    app.kubernetes.io/name: pixiu-gateway
    app.kubernetes.io/instance: pixiu-gateway
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: pixiu-gateway
      app.kubernetes.io/name: pixiu-gateway
      app.kubernetes.io/instance: pixiu-gateway
  template:
    metadata:
      labels:
        control-plane: pixiu-gateway
        app.kubernetes.io/name: pixiu-gateway
        app.kubernetes.io/instance: pixiu-gateway
    spec:
      serviceAccountName: pixiu-gateway-sa
      containers:
        - name: pixiu-gateway
          image: dubboregistry/pixiu-gateway:v1.1.0
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/pixiu-gateway
          args:
            - --config-path=/config/pg.yaml
            - --log-level=info
          ports:
            - containerPort: 8081
              name: health
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
# Source: pixiu-gateway/templates/config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pixiu
  namespace: default
spec:
  gatewayClassName: pg
  listeners:
    - name: http
      protocol: HTTP
      port: 8888
    - name: dubbo
      protocol: TCP
      port: 8889
    - name: triple
      protocol: GRPC
      port: 9999
    - name: http2
      protocol: HTTP2
      port: 8881
---
# Source: pixiu-gateway/templates/config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: pg
spec:
  controllerName: pixiu.apache.org/pixiu-gateway-controller
